Fix map viewer info overlay wrapping issues on small displays

--- a/src/css/_ui.scss
+++ b/src/css/_ui.scss
@@ -323,6 +323,9 @@ input[type="number"]::-webkit-outer-spin-button {
 		right: 0;
 		display: flex;
 		justify-content: center;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
 
 		span {
 			margin: 0 5px;
